

2.42.1 - December ??, 2010

    Added support for new meta-predicate template mode indicators: (/) for a
    predicate indicator, [/] for a list of predicate indicators, and [0] for
    a list of goals.

    Corrected a bug in the Logtalk compiler when checking meta-predicate
    clause heads for errors where the "::" meta-argument mode indicator
    was still being interpreted as "0".

    Corrected a bug in the SWI-Prolog "swihooks.lgt" file that resulted in
    a bogus error message about an invalid Logtalk flag when consulting a
    Prolog file when there is a Logtalk source file with the same name in
    the same directory.

    Added missing support for built-in tabling meta-predicates to the YAP
    config file.

    Added missing support for the proprietary built-in meta-predicates
    compile_predicates/1 and win_insert_menu_item/4 to the SWI-Prolog
    config file.

    Added missing support for the proprietary built-in meta-predicate
    save_predicates/2 to the SICStus Prolog config files.

    Added missing support for the proprietary built-in meta-predicate
    table_cardinality_limit/2 to the B-Prolog config file.

    Added missing support for built-in tabling meta-predicates to the XSB
    config file.

    Updated the SICStus Prolog, SWI-Prolog, and YAP config files in order to
    override the meta-predicate templates for the consult/1 and load_files/2
    built-in predicates.

    Updated the "problog" example, adding preliminary support for the new
    annotated disjunctions syntax.

    Added a "magic" element to the Logtalk mime-type file for the
    freedesktop.org shared mime-info database.


2.42.0 - December 1, 2010

    Added an implementation of persistent object flags, contributed by
    Theofrastos Mantadelis.

    Added a new pair of built-in predicates, conforms_to_protocol/2-3,
    implementing the transitive closure of the protocol implementation
    relation.
